@@ -13,9 +13,9 @@ setup(name='rer.groupware.workflow',
         "Programming Language :: Python",
         "Topic :: Software Development :: Libraries :: Python Modules",
         ],
-      keywords='',
+      keywords='plone plnegov groupware workflow security',
       author='RedTurtle Technology',
-      author_email='sviluppoplone@redturtle.net',
+      author_email='sviluppoplone@redturtle.it',
       url='',
       license='GPL',
       packages=find_packages(exclude=['ez_setup']),
