@@ -12,6 +12,7 @@ Plone 4 version
 - groupware_folders_workflow workflow moved to rer.groupware.room [keul]
 - removed deprecated i18n folder for Plone domain [keul]
 - added Site Managers role support [andrea]
+- removed forum workflow (conversation and comment are kept) [keul]
 
 1.1.1 (2012-10-03)
 ------------------
